Add signup button, storage, ability to retreive. This seems to work, sort of, using the dev app server locally, but I keep having to visit a page twice for anything to show up . . . not deploying so you guys can tell me if I've gone wrong anywhere.

--- a/roguehacklab/app.yaml
+++ b/roguehacklab/app.yaml
@@ -11,3 +11,9 @@ handlers:
 - url: /(.*)\.(html|js|css|png|ico|txt|jpg)
   static_files: static/\1.\2
   upload: static/.*
+
+- url: /signup
+  script: signup.py
+  
+- url: /listsignups
+  script: signup.py
