make the wiki work

--- a/cookbooks/wiki/files/default/roguehacklab.com.conf
+++ b/cookbooks/wiki/files/default/roguehacklab.com.conf
@@ -16,7 +16,7 @@ SSLCertificateChainFile /etc/apache2/roguehacklab.intermediate.crt
         ServerName roguehacklab.com
         ServerAdmin dlowe@roguehacklab.com
 
-        DocumentRoot /var/lib/mediawiki
+        Alias /mediawiki /var/lib/mediawiki
         <Directory />
                 Options FollowSymLinks
                 AllowOverride None
