--- a/cookbooks/wiki/files/default/roguehacklab.com.conf
+++ b/cookbooks/wiki/files/default/roguehacklab.com.conf
@@ -16,18 +16,10 @@ SSLCertificateChainFile /etc/apache2/roguehacklab.intermediate.crt
         ServerName roguehacklab.com
         ServerAdmin dlowe@roguehacklab.com
 
+        # mediawiki stuff
         Alias /mediawiki /var/lib/mediawiki
-        <Directory />
-                Options FollowSymLinks
-                AllowOverride None
-        </Directory>
-        <Directory /var/www/>
-                Options Indexes FollowSymLinks MultiViews
-                AllowOverride None
-                Order allow,deny
-                allow from all
-        </Directory>
 
+        # mailman stuff
         ScriptAlias /cgi-bin/ /usr/lib/cgi-bin/
         <Directory "/usr/lib/cgi-bin">
                 AllowOverride None
@@ -45,6 +37,7 @@ SSLCertificateChainFile /etc/apache2/roguehacklab.intermediate.crt
              Order allow,deny
              Allow from all
         </Directory>
+
         Alias /images/mailman/ /var/lib/mailman/icons/
 
         ErrorLog ${APACHE_LOG_DIR}/error.log
