wire up redirects

--- a/cookbooks/wiki/files/default/roguehacklab.com.conf
+++ b/cookbooks/wiki/files/default/roguehacklab.com.conf
@@ -1,5 +1,8 @@
 ## unilaterally redirect http->https
+NameVirtualHost *:80
+
 <VirtualHost *:80>
+        ServerName roguehacklab.com
         RedirectMatch (.*) https://roguehacklab.com$1
 </VirtualHost>
 
@@ -17,6 +20,7 @@ SSLCertificateChainFile /etc/apache2/roguehacklab.intermediate.crt
         ServerAdmin dlowe@roguehacklab.com
 
         # mediawiki stuff
+        RedirectMatch "^/$" /mediawiki
         Alias /mediawiki /var/lib/mediawiki
 
         # mailman stuff
