--- a/cookbooks/wiki/files/default/roguehacklab.com.conf
+++ b/cookbooks/wiki/files/default/roguehacklab.com.conf
@@ -52,6 +52,8 @@ SSLCertificateChainFile /etc/apache2/roguehacklab.intermediate.crt
 
         CustomLog ${APACHE_LOG_DIR}/access.log combined
 
+    Redirect temp /events/ http://www.meetup.com/Rogue-Hack-Lab/events/calendar/
+
     Alias /doc/ "/usr/share/doc/"
     <Directory "/usr/share/doc/">
         Options Indexes MultiViews FollowSymLinks
